@@ -27,9 +27,10 @@
 
 = 0.4.0-dev (2025 Xxx xx)
 :revnumber: 0.4.0
-:revdate: 2025-xx-xx
+:revdate: 2026-xx-xx
 
 * update: `ConfigAwareTrait::setConfig` check for property `defaultConfig` to use as the config base options.
+* new: `ConfigAwareAttribute::globalConfig` Whether to use global or class-specific configuration.
 
 :leveloffset!:
 :leveloffset: +2
